fixed overflow issue on profile page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1537,7 +1537,7 @@ tbody {
   max-width: 100%;
   color: white;
   height: 100%;
-  max-height: 800px; }
+  max-height: 1017px; }
   @media (min-width: 768px) {
     #profile .hero_profile {
       padding-top: 5em;
