--- a/resources/assets/sass/_profile.scss
+++ b/resources/assets/sass/_profile.scss
@@ -20,7 +20,7 @@ $nav-height:0;
 		max-width: 100%;
 		color: white;
 		height: 100%;
-		max-height: 800px;
+		max-height: 1017px;
 
 		&:before {
 			content: '';
